deployment/blinker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: led-blinker
spec:
  ports:
  - name: http
    port: 5000
    targetPort: 5000
  selector:
    app: led-blinker
  clusterIP: None
